--- a/.github/workflows/image.yaml
+++ b/.github/workflows/image.yaml
@@ -6,6 +6,10 @@ on:
 
 jobs:
   build-and-push:
+    permissions:
+      contents: read
+      packages: write
+
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
